improved tests for base64 binary bodies and made requests with only an http response json more resilient by also accepting a full exception json