@@ -9,18 +9,14 @@ public class Base64Converter {
 
     private static final String BASE64_PATTERN = "^(?:[A-Za-z0-9+/]{4})*(?:[A-Za-z0-9+/]{2}==|[A-Za-z0-9+/]{3}=)?$";
 
-    public static byte[] parseBase64Binary(String data) {
+    public static byte[] base64StringToBytes(String data) {
         if (data.matches(BASE64_PATTERN)) {
             return DatatypeConverter.parseBase64Binary(data);
         }
         return data.getBytes();
     }
 
-    public static String printBase64Binary(byte[] data) {
-        String dataAsBase64 = DatatypeConverter.printBase64Binary(data);
-        if (dataAsBase64.matches(BASE64_PATTERN)) {
-            return DatatypeConverter.printBase64Binary(data);
-        }
-        return new String(data);
+    public static String stringToBase64Bytes(byte[] data) {
+        return DatatypeConverter.printBase64Binary(data);
     }
 }
